# accel-viewer

./: .gitignore  LICENSE  README.md  prepare_data.py  pyproject.toml  requirements.txt
app/: __init__.py
src/accel_viewer/: app.py  cli.py
src/accel_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/accel_viewer/static/: index.html
